--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="logo">Career<span>Portal</span></div>
         <ul class="nav-links">
-            <li><a href="index.html">Videos</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="roadmap.html">Roadmap</a></li>
             <li><a href="profile.html" class="active">Sync Profile</a></li>
         </ul>
