Updated CareerPortal APIs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <div class="hero-content">
                 <h1>Connect with LinkedIn to view progress</h1>
                 <p>Sync your profile to unlock personalized career paths and skill gap analysis.</p>
-                <button id="linkedin-sync-btn" class="btn-primary">Connect LinkedIn</button>
+                <button id="linkedin-sync-btn" onclick="loginWithLinkedIn()" class="btn-primary">
+                    Connect LinkedIn
+                </button>
             </div>
         </section>
 
